[package]
name = "amtrak-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
json = { version = "0.12.4"}
serde = {version = "1.0.159", features = ["derive"] }
serde_json = { version = "1.0.95"}